CSS improvement / close -> rm 1. rename class `close` to `rm` 2. place this plugin in bootstrap theme to test, find many bugs. Fixed    1. menu have high z-index    2. widget have background color    3. widget align to left    4. tags won't overflow

--- a/src/ac-widget.css
+++ b/src/ac-widget.css
@@ -3,18 +3,21 @@
   border-radius: 4px;
   border: 1px solid #CCC;
   padding: 3px 0 4px 5px;
+  background-color: #FFFFFF;
+  text-align: left;
 }
 .ac.tag {
   background-color: #EEE;
   border-radius: 3px;
   border: 1px solid #CCC;
   padding: 1px 0 1px 4px;
-  margin-right: 4px;
+  margin: 2px 4px 2px 0;
+  display: inline-block;
 }
 .ac.tag.focus {
   background-color: #FEFBC6;
 }
-.ac.close {
+.ac.rm {
   font-size: 20px;
   font-weight: bold;
   line-height: 18px;
@@ -25,7 +28,7 @@
   text-decoration: none;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-.ac.close:hover {
+.ac.rm:hover {
   opacity: 0.4;
   filter: alpha(opacity=40);
   cursor: pointer;
@@ -37,6 +40,7 @@
 .ac.text-field {
   border: none;
   font-size: 16px;
+  width: 100%;
 }
 .ac.text-field:focus {
   outline: 0;
@@ -51,10 +55,11 @@
   left: 2px;
   top: 22px;
   background-color: #fff;
+  z-index: 2000;
 }
 .ac.menu-item {
   padding: 4px 8px;
-  font-weight: bold;
+  text-align: left;
 }
 .ac.menu-item:hover {
   Background-color: #DDD;
